--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Pinterest Zen Mode",
+  "name": "Pin@Home",
   "version": "2.0.0",
   "description": "Transform your Pinterest board into a clean, curated dashboard.",
   "permissions": [
